2004-09-07  Christian Kellner  <gicmo@gnome-de.org>

	* libgnomevfs/gnome-vfs-ssl.c: Fix build when neither
	OpenSSL nor GnuTLS is enabled. This should fix #151880.
	Thanks to Alex Fraser <alex@phatcore.com> for providing 
	the patch. 

2004-09-07  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_component),
	(gnome_vfs_mime_get_short_list_components): 
	unrevert previous reversion (with release team
	approval).

2004-09-07  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_component),
	(gnome_vfs_mime_get_short_list_components): 
	revert change that breaks code freeze (oops!).

2004-09-06  Alexander Larsson  <alexl@redhat.com>

	* modules/smb-method.c: (do_read_directory):
	Set the type field as valid.

2004-09-06  Alexander Larsson  <alexl@redhat.com>

	* modules/ftp-method.c: (do_get_file_info), (do_read_directory):
	Support symlinks.

2004-09-04  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-mime-handlers.c: remove unused variables to
	  fix compilation

2004-09-04  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-mime-info-cache.c: make sure we don't free
	  memory we'll reuse later when managing the mime_info_cache_map 
	  hash table memory (fixes #150467)

2004-09-03  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_component): don't use
	the short list when selecting a componenent to 
	return.
	(gnome_vfs_mime_get_short_list_components): Prioritize
	exact matches higher than supertype matches.

2004-09-03  Ray Strode  <rstrode@redhat.com>

	Cleanup and leak fixes by Christophe Fergeau.

	* libgnomevfs/eggdesktopentries.c:
	(egg_desktop_entries_free): fix leak
	(egg_desktop_entries_parse_comment): use
	g_strndup instead of g_new/strncpy().
	(egg_desktop_entry_free),
	(egg_desktop_entries_remove_group_node): fix leak.
